resolved spacing/layout

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 /* Frontend Mentor Styles */
 .attribution {
   margin-block-start: 1rem;
-  font-size: 11px;
+  font-size: 1.1rem;
   text-align: center;
 }
 .attribution a {
@@ -11,8 +11,10 @@
 :root {
   /* Colors */
   --primary-pale-blue: hsla(225, 100%, 94%, 1);
+  --secondary-pale-blue: hsla(225, 100%, 94%, 0.5);
   --primary-bright-blue: hsl(245, 75%, 52%, 1);
   --primary-white: hsla(0, 0%, 100%, 1);
+  --secondary-text: hsla(244, 7%, 55%, 1);
   --neutral-pale-blue: hsla(225, 100%, 98%, 1);
   --neutral-desaturated: hsla(224, 23%, 55%, 1);
   --neutral-dark-blue: hsla(223, 47%, 23%, 1);
@@ -21,8 +23,8 @@
 
   /* Typography */
   --bodyText-font: 'Red Hat Display', sans-serif;
-  --bodyText-header: 1.375rem;
-  --bodyText-paragraph: 16px;
+  --bodyText-header: 2.2rem;
+  --bodyText-paragraph: 1.6rem;
   --bodyText-medium: 500;
   --bodyText-bold: 700;
   --bodyText-thick: 900;
@@ -42,10 +44,10 @@ body {
 }
 
 .card {
-  margin-block-start: 4.375rem;
-  margin-block-end: 4.375rem;
-  margin-inline-start: 1.5rem;
-  margin-inline-end: 1.5rem;
+  margin-block-start: 7rem;
+  margin-block-end: 7rem;
+  margin-inline-start: 2.5rem;
+  margin-inline-end: 2.5rem;
   background: var(--primary-white);
   box-shadow: 0 20px 20px var(--shadow-card-color);
   border-radius: 25px;
@@ -56,9 +58,9 @@ body {
 }
 
 .hero-img {
-  width: calc(375px - 3.125rem);
+  width: calc(375px - 3.25rem);
   border-radius: 25px 25px 0 0;
-  margin-block-end: 2rem;
+  margin-block-end: 3.4rem;
 }
 
 .hero-txt-wrapper {
@@ -66,19 +68,21 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-block-end: 2.4rem;
 }
 
 .hero-txt-header {
   font-size: var(--bodyText-header);
+  font-weight: var(--bodyText-thick);
   margin: 0;
-  margin-block-end: 1rem;
+  margin-block-end: 1.7rem;
 }
 
 .hero-txt-body {
-  margin: 0;
-  padding: 0 1.3125rem 0 1.3125rem;
+  padding: 0 2rem 0 2rem;
   font-size: var(--bodyText-paragraph);
   font-weight: var(--bodyText-bold);
+  color: var(--secondary-text);
   text-align: center;
 }
 
@@ -86,40 +90,43 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-block-start: 1.5rem;
   margin-block-end: 1.5rem;
-  margin-inline-start: 1.5rem;
-  margin-inline-end: 1.5rem;
-  /* background: var(--neutral-pale-blue); */
-  background-color: #f8f9fe;
+  margin-inline-start: 2.5rem;
+  margin-inline-end: 2.5rem;
+  margin-block-end: 2.5rem;
+  border-radius: 15px;
+  background: var(--secondary-pale-blue);
 }
 
 .subscription-icon {
-  /* margin-inline-end: 1.5rem; */
-  padding: 0 1.5rem 0 1.5rem;
+  padding: 0 1.5rem 0 1.7rem;
+  width: 8rem;
+}
+
+.subscription-icon .icon {
   width: 4.8rem;
 }
 
 .subscription-plan {
-  border: 1px solid black;
+  width: 12.2rem;
+  text-align: left;
+  padding: 1.5rem 0 1.6rem 0;
 }
 
 .subscription-plan h2 {
-  font-size: 2.2rem;
+  font-size: 1.4rem;
   margin: 0;
-  margin-block-start: 1.5rem;
-  margin-block-end: 1.2rem;
+  padding-bottom: 1rem;
 }
 
 .subscription-plan p {
   font-size: 1.4rem;
   margin: 0;
-  margin-block-end: 1.6rem;
 }
 
 .subscription-change {
-  border: 1px solid black;
-  padding: 0 1.5rem 0 4.1rem;
+  font-size: 1.4rem;
+  width: 7.3rem;
 }
 
 .cta-wrapper {
@@ -144,4 +151,7 @@ body {
 .btn-cancel {
   border: none;
   background: none;
+  color: var(--secondary-text);
+  font-size: 1.6rem;
+  font-weight: var(--bodyText-bold);
 }
